hphp/hack/test/typecheck/safe_abstract/needs_concrete_9.php
<?hh

abstract class A {
  <<__NeedsConcrete>>
  public static function nc(): void {}
}

function foo(classname<A> $cls): void {
  $cls::nc(); // error
}
